# twdll

./: .clang-format  .clangd  .emmyrc.json  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  LICENSE  README.md  build.sh  config.ld  generate_docs.sh  getlua.sh  index.html  library.c  library.cpp  library.h  rungame.lnk  saveenv.sh
.clion/: README_JETBRAINS.md
.clion/options/windows/: toolchains.xml
.github/: FUNDING.yml
.github/docs_template/: index.template.html
.github/scripts/: generate_doc_index.py  validate_changelog.py
.github/workflows/: build.yml  codeql-analysis.yml
.run/: Template Lua Application.run.xml  all.run.xml  lua.exe.run.xml  luac.exe.run.xml  twdll.run.xml
.whatever/: README.old.md
.whatever/exe/: cli.md
.whatever/lua/dump/: README.md
0.1.0-alpha.1/: index.html
0.1.0-alpha.1/modules/: libtwdll.html  twdll_battle_unit.html  twdll_character.html  twdll_unit.html
0.1.0-alpha.2/: index.html
0.1.0-alpha.2/modules/: libtwdll.html  twdll_battle_unit.html  twdll_character.html  twdll_unit.html
0.2.0-alpha.1/: index.html
0.2.0-alpha.1/modules/: libtwdll.html  twdll_battle_unit.html  twdll_character.html  twdll_unit.html
0.2.1/: index.html
0.2.1/modules/: libtwdll.html  twdll_battle_unit.html  twdll_character.html  twdll_unit.html
0.3.0/: index.html
0.3.0/modules/: libtwdll.html  twdll_battle_unit.html  twdll_character.html  twdll_unit.html
0.4.0/: index.html
0.4.0/modules/: libtwdll.html  twdll_battle_unit.html  twdll_character.html  twdll_faction.html  twdll_unit.html
0.5.0/modules/: twdll_character.html  twdll_military_force.html  twdll_unit.html
0.6.1/: index.html
0.6.1/attila/: index.html
0.6.1/attila/modules/: twdll_character.html  twdll_faction.html
0.6.1/rome2/modules/: twdll_military_force.html  twdll_unit.html
devtools/scripts/cheatengine/: idaoffset.lua
devtools/tools/scylla_hide/: .gitignore
docs/: CMakeLists.txt
docs/attila/: index.html
docs/attila/modules/: twdll.character.html  twdll.html  twdll.unit.html  twdll_battle_unit.html  twdll_character.html  twdll_military_force.html  twdll_unit.html
docs/lua/: CMakeLists.txt  ca.md  config.ld
docs/lua/doc/: index.html
docs/lua/doc/modules/: twdll_battle_unit.html  twdll_character.html  twdll_faction.html  twdll_military_force.html  twdll_unit.html
docs/lua/html/modules/: libtwdll.html  twdll_unit.html
docs/lua/include/luafilesystem/: CMakeLists.txt
docs/rome2/: index.html
docs/rome2/modules/: twdll.html  twdll_battle_unit.html  twdll_character.html  twdll_faction.html  twdll_unit.html
examples/: example.lua
helpers/: README_JETBRAINS.md  printers.lua
include/imgui/: IMGUI_VERSION.txt
include/lua-ver-5.1.1/src/: luaconf.h
include/lua-ver-5.1.2/src/: luaconf.h
include/lua-ver-5.1.3/src/: luaconf.h
include/lua-ver-5.1/src/: luaconf.h
include/luafilesystem/: CMakeLists.txt
include/luasocket/src/: luasocket.c  luasocket.h
include/python/embed/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _hashlib.pyd  (+16 more)
latest/: index.html
latest/modules/: libtwdll.html  twdll_character.html
lua-5.1/src/: luaconf.h
luabuiltforrome/: README.md
luadoc/: index.html
luadoc/modules/: libtwdll.html  twdll_battle_unit.html  twdll_character.html  twdll_faction.html  twdll_unit.html
master/: index.html
master/modules/: libtwdll.html  twdll_character.html
nightly/: index.html
nightly/modules/: libtwdll.html  twdll_battle_unit.html  twdll_character.html  twdll_faction.html  twdll_military_force.html  twdll_unit.html
nightly/rome2/: index.html
pack/lua_scripts/: all_scripted.lua
pack/pl/: pretty.lua
reclass/: structs.rcnet
script/_lib/: lib_logging.lua  lib_twdll.lua
scripts/: disable_outdated_mods_popup.bat  follow_log.py  kill_and_run_game.ps1  kill_game.ps1  kill_rome2.ps1  run.sh  run_game.ps1
scripts/cheatengine/: idaoffset.lua
scripts/ida/: breakpoint_event.py  calculate_ce_offset_for_idaghidra.py  closepseudocode.py  hexcopy.py  set_breakpoint_from_ce.py
scylla_hide/: inject.sh  scylla_hide.ini
src/: battle_unit.cpp  battle_unit.h  battle_unit_script_interface.cpp  battle_unit_script_interface.h  character.cpp  character_script_interface.cpp  character_script_interface.h  dx_finder.cpp  dx_finder.h  faction.cpp  faction.h  faction_script_interface.cpp  faction_script_interface.h  game_lua_api.cpp  game_lua_api.h  libtwdll.cpp  log.cpp  log.h  lua_forward_declarations.h  main.cpp  military_force.cpp  military_force.h  military_force_script_interface.cpp  military_force_script_interface.h  module.cpp  module.h  money.cpp  performance_test.cpp  performance_test.h  script_object.h  script_utils.cpp  script_utils.h  signature_scanner.cpp  tw.h  ui.cpp  ui.h  unit.cpp  unit_script_interface.cpp  unit_script_interface.h
src/attila/: battle_unit.cpp  campaign_ui.cpp  character.cpp  faction.cpp  lua_sigs.cpp  military_force.cpp  unit.cpp  world.cpp
src/common/: campaign_hooks.cpp  campaign_hooks.h  log.cpp  lua_api.cpp  lua_api.h  lua_core.cpp  signature_scanner.cpp  signature_scanner.h  tw.h
src/game/: g_campaign.cpp  g_campaign.h  game_context.cpp  game_context.h
src/lua/: lua_api.cpp  lua_api.h  lua_core.cpp
src/python/: performance_test.cpp  performance_test.h
src/rome2/: battle_unit.cpp  campaign_ui.cpp  character.cpp  faction.cpp  lua_sigs.cpp  military_force.cpp  unit.cpp  world.cpp
subprojects/injector/: cMakeLists.txt  main.cpp
subprojects/injector_attach/: CMakeLists.txt  main.cpp
subprojects/memalochook/: asmlib_hooks.cpp  asmlib_hooks.h  cMakeLists.txt  hook_manager.cpp  hook_manager.h  hooks.h  log.cpp  log.h  main.cpp
tests/: character_script_interface.test.lua  consulscriptum.pack  run.lua  test_battle_unit_script_interface.lua  test_character_script_interface.lua  test_unit_script_interface.lua  test_utils.lua  unit_script_interface.test.lua
tests/cpp/: CMakeLists.txt  test_main.cpp
tests/shared/: testing.lua
tools/: paths.ps1.example  twdll.ps1
tools/reclass/: structs.rcnet
tools/scylla_hide/: README.md  scylla_hide.ini
(+76 files in other folders)
